overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
     font-size: 1.5rem;
     font-weight: 300;
     min-height: 100svh;
+    overflow-x: hidden;
 }
 
 h1,
